right one maybe?

--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html>
     <head>
         <title>First Assignment</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <section class="banner">
-            <div class="content">
-                <h1>Let's Help Those Who Are <br>More In Need</h1>
-                <p>A small amount of your money can save someone's life.<br> Feel free to donate as much amount as you can.</p>
-                    <a class="donate-button" target="_blank" href="https://www.bkash.com/">Donate Now</a>
+        <!-- Banner Section -->
+         <section class="banner">
+            <div class="banner-text">
+                <h1>Sylhet Needs Your Help</h1>
+                <p>A small amount of your money can save someone's life.<br> Feel free to donate any amount.</p>
+                <a class="donate-button" target="_blank" href="https://www.bkash.com/">Donate Now</a>
+              </div>
+         </section> 
+                 <!-- Donation Plan Section -->
+        <!-- Footer Section -->
+        <footer>
+            <h1>Be Humble</h1>
+            <h3>I’m gonna do it</h3>
+          </footer> 
 
-            </div>
-        </section>
     </body>
 </html>
