--- a/index.html
+++ b/index.html
@@ -13,7 +13,43 @@
                 <a class="donate-button" target="_blank" href="https://www.bkash.com/">Donate Now</a>
               </div>
          </section> 
-                 <!-- Donation Plan Section -->
+        <!-- Donation Plan Section -->
+          <section class="donation-plan">
+              <div class="donation-text">
+                <h1>Our Donation Plan</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset. <br>No duo populo animal noluisse, enim</p>
+              </div>
+              <div class="donation-types">
+                <div class="box">
+                        <img src="images/food.png" alt="icon2">
+                        <h4>Food for a family</h4>
+                    <p>Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="box">
+                        <img src="images/shelter.png" alt="icon3">
+                        <h4>Shelter for a family</h4>
+                    <p>Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="box">
+                        <img src="images/Frame-1.png" alt="icon4">
+                        <h4>Education for a child
+                        </h4>
+                    <p>Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+              </div>
+          </section>  
+
+
         <!-- Footer Section -->
         <footer>
             <h1>Be Humble</h1>
