donation-plan section done

--- a/index.html
+++ b/index.html
@@ -13,41 +13,39 @@
                 <a class="donate-button" target="_blank" href="https://www.bkash.com/">Donate Now</a>
               </div>
          </section> 
-        <!-- Donation Plan Section -->
-          <section class="donation-plan">
-              <div class="donation-text">
-                <h1>Our Donation Plan</h1>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                    deterruisset. <br>No duo populo animal noluisse, enim</p>
-              </div>
-              <div class="donation-types">
-                <div class="box">
-                        <img src="images/food.png" alt="icon2">
-                        <h4>Food for a family</h4>
-                    <p>Amet minim mollit non deserunt
-                        ullamco est sit aliqua dolor do amet
-                        sint. Velit officia consequat duis enim
-                        velit mollit.</p>
-                </div>
-                <div class="box">
-                        <img src="images/shelter.png" alt="icon3">
-                        <h4>Shelter for a family</h4>
-                    <p>Amet minim mollit non deserunt
-                        ullamco est sit aliqua dolor do amet
-                        sint. Velit officia consequat duis enim
-                        velit mollit.</p>
-                </div>
-                <div class="box">
-                        <img src="images/Frame-1.png" alt="icon4">
-                        <h4>Education for a child
-                        </h4>
-                    <p>Amet minim mollit non deserunt
-                        ullamco est sit aliqua dolor do amet
-                        sint. Velit officia consequat duis enim
-                        velit mollit.</p>
-                </div>
-              </div>
-          </section>  
+        	<!-- Donation-Plan section starts -->
+	<section class="donation-plan">
+        <div class="donation-text">
+            <h1>Our Donation Plan</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                <br>deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+            <div id="food-box" class="donation-box">
+                <img src="images/food.png" alt="food">
+                <h3>Food for a family</h3>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+            <div id="second-box" class="donation-box">
+                <img src="images/shelter.png" alt="shelter">
+                <h3>Shelter for a family</h3>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+            <div id="third-box" class="donation-box">
+                <img src="images/Frame-1.png" alt="books">
+                <h3>Education for a child</h3>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+    </section>
+	<!-- Donation-Plan section ends -->
 
 
         <!-- Footer Section -->
