donate today section done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <!-- Banner Section -->
+        <!-- Banner Section starts -->
          <section class="banner">
             <div class="banner-text">
                 <h1>Sylhet Needs Your Help</h1>
@@ -13,6 +13,41 @@
                 <a class="donate-button" target="_blank" href="https://www.bkash.com/">Donate Now</a>
               </div>
          </section> 
+    <!-- Banner Section ends -->
+
+
+	<!-- Donation-Today section starts -->
+	<section class="Donate-today">
+        <div class="donate-text">
+            <h1>Donate Today</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                <br>deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="money-types">
+            <div class="money-box">
+                <h3>100tk</h3>
+            </div>
+            <div id="second-box" class="money-box">
+                <h3>200tk</h3>
+            </div>
+            <div class="money-box">
+                <h3>500tk</h3>
+            </div>
+            <div class="money-box">
+                <h3>1000tk</h3>
+            </div>
+            <div class="money-box">
+                <h3>5000tk</h3>
+            </div>
+        </div>
+        <form class="other-amount">
+            <input id="text" type="text" placeholder="Other Amount (Taka)">
+            <br>
+            <input id="submit" type="submit" value="Donate Now">
+          </form>
+    </section>
+	<!-- Donation-Today section ends -->
+
         	<!-- Donation-Plan section starts -->
 	<section class="donation-plan">
         <div class="donation-text">
@@ -28,7 +63,7 @@
                     sint. Velit officia consequat duis enim 
                     velit mollit.</p>
             </div>
-            <div id="second-box" class="donation-box">
+            <div id="shelter-box" class="donation-box">
                 <img src="images/shelter.png" alt="shelter">
                 <h3>Shelter for a family</h3>
                 <p>Amet minim mollit non deserunt 
@@ -36,7 +71,7 @@
                     sint. Velit officia consequat duis enim 
                     velit mollit.</p>
             </div>
-            <div id="third-box" class="donation-box">
+            <div id="education-box" class="donation-box">
                 <img src="images/Frame-1.png" alt="books">
                 <h3>Education for a child</h3>
                 <p>Amet minim mollit non deserunt 
@@ -47,11 +82,13 @@
     </section>
 	<!-- Donation-Plan section ends -->
 
+    
+
 
         <!-- Footer Section -->
         <footer>
             <h1>Be Humble</h1>
-            <h3>I’m gonna do it</h3>
+            <h3>Let's make a change in our society.</h3>
           </footer> 
 
     </body>
