fonts and paragraph writting left

--- a/index.html
+++ b/index.html
@@ -83,7 +83,23 @@
 	<!-- Donation-Plan section ends -->
 
     
+ <!-- Update section starts -->   
+ <section class="update">
+    <div class="update-text">
+        <h1>Get My Updates</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+            <br>deterruisset. No duo populo animal noluisse, enim</p>
+    </div>
 
+    <div class="email-box">
+        <div class="email-subscription">
+            <input type="email" id="email" name="email" placeholder="Email">
+            <button class="subscribe-button" type="button" onclick="alert('Subscribtion completed')">Subscribe</button>
+        </div>
+    </div>
+
+</section>
+ <!-- Update section ends -->  
 
         <!-- Footer Section -->
         <footer>
