finished for 50 marks

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>First Assignment</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -20,8 +23,7 @@
 	<section class="Donate-today">
         <div class="donate-text">
             <h1>Donate Today</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                <br>deterruisset. No duo populo animal noluisse, enim</p>
+            <p>This project will help thousands of people affected by the worst flood in Bangladesh with food relief,<br> clean water, hygiene products, medical support, and financial assistance.</p>
         </div>
         <div class="money-types">
             <div class="money-box">
@@ -52,32 +54,22 @@
 	<section class="donation-plan">
         <div class="donation-text">
             <h1>Our Donation Plan</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                <br>deterruisset. No duo populo animal noluisse, enim</p>
+            <p>All the funds collected for tackling the flood situation will be channelled towards the recovery of flood victims. With your support and dedication of our 50000 pool of volunteers across the country, we will drive to respond to the urge to save lives. We will provide food relief packs, salines, medicine, and candles along with necessary items to survive this flood.</p>
         </div>
             <div id="food-box" class="donation-box">
                 <img src="images/food.png" alt="food">
                 <h3>Food for a family</h3>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                <p>Every day we distribute food to thousands of people in different parts of the country. You can be a minor partner in this massive event if you want.</p>
             </div>
             <div id="shelter-box" class="donation-box">
                 <img src="images/shelter.png" alt="shelter">
                 <h3>Shelter for a family</h3>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                <p>Flood has swept away thousands of people houses so we want to rebuild their houses. This require lots of money. So be a part if you can.</p>
             </div>
             <div id="education-box" class="donation-box">
                 <img src="images/Frame-1.png" alt="books">
                 <h3>Education for a child</h3>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                <p>Flood has made a fullstop in childrens education. They have lost all thier books. So we took an initiative to buy them books. Please be a part if you can.</p>
             </div>
     </section>
 	<!-- Donation-Plan section ends -->
@@ -87,8 +79,7 @@
  <section class="update">
     <div class="update-text">
         <h1>Get My Updates</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-            <br>deterruisset. No duo populo animal noluisse, enim</p>
+        <p>To get more updates about our recent events subscribe us, and get updates regularly. Remember, Giving is not about making donation. It is about making a difference. </p>
     </div>
 
     <div class="email-box">
@@ -104,7 +95,7 @@
         <!-- Footer Section -->
         <footer>
             <h1>Be Humble</h1>
-            <h3>Let's make a change in our society.</h3>
+            <p>Let's make a change in our society.</p>
           </footer> 
 
     </body>
