--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     </div>
 
     <div class="email-box">
-        <div class="email-subscription">
+        <form class="email-subscription">
             <input type="email" id="email" name="email" placeholder="Email">
             <button class="subscribe-button" type="button" onclick="alert('Subscribtion completed')">Subscribe</button>
-        </div>
+        </form>
     </div>
 
 </section>
@@ -97,6 +97,5 @@
             <h1>Be Humble</h1>
             <p>Let's make a change in our society.</p>
           </footer> 
-
     </body>
 </html>
