--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Banner Section starts -->
          <section class="banner">
             <div class="banner-text">
-                <h1>Sylhet Needs Your Help</h1>
+                <h1>Bangladesh is sinking!<br> Save Bangladesh now</h1>
                 <p>A small amount of your money can save someone's life.<br> Feel free to donate any amount.</p>
                 <a class="donate-button" target="_blank" href="https://www.bkash.com/">Donate Now</a>
               </div>
