--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
     </section>
 	<!-- Donation-Plan section ends -->
 
+   <!-- Bonus section starts -->   
+   <section class="Bonus">
+    <h3>Watch A Small Document Of Our Organization</h3>        
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/90ihcWbxoMo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+   </section>
     
  <!-- Update section starts -->   
  <section class="update">
