--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <h3>Watch A Small Document Of Our Organization</h3>        
         <iframe width="560" height="315" src="https://www.youtube.com/embed/90ihcWbxoMo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
    </section>
+      <!-- Bonus section ends -->
     
  <!-- Update section starts -->   
  <section class="update">
@@ -97,10 +98,12 @@
 </section>
  <!-- Update section ends -->  
 
-        <!-- Footer Section -->
+        <!-- Footer Section starts -->
         <footer>
             <h1>Be Humble</h1>
             <p>Let's make a change in our society.</p>
           </footer> 
+        <!-- Footer Section starts -->
+
     </body>
 </html>
